--- a/app/views/contributors/_form.html.erb
+++ b/app/views/contributors/_form.html.erb
@@ -54,7 +54,7 @@ roles_tooltip = _("Select each role that applies to the contributor.")
 
 <div class="form-group row" id="contributor-org-controls"><!-- org -->
   <div class="col-md-8">
-    <%= render partial: "shared/org_selectors/combined",
+    <%= render partial: "shared/org_autocomplete",
                locals: { form: form,
                          default_org: contributor.org,
                          required: false,
