--- a/app/views/branded/plans/_project_details.html.erb
+++ b/app/views/branded/plans/_project_details.html.erb
@@ -108,19 +108,13 @@ ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics comm
 </conditional>
 
 <conditional>
-  <div id="funder-org-controls" class="form-group">
-    <div class="col-md-8">
-      <%= fields_for :funder, plan.funder do |funder_fields| %>
-        <%= render partial: "shared/org_selectors/combined",
-            locals: {
-              form: form,
-              funder_only: true,
-              label: _("Funder"),
-              default_org: plan.funder,
-              required: false
-            } %>
-      <% end %>
-    </div>
+  <div class="form-group row" id="funder-org-controls">
+    <%= render partial: "shared/org_autocomplete",
+              locals: { form: form,
+                        default_org: plan.funder,
+                        required: false,
+                        funder_only: true,
+                        label: _("Funder") } %>
   </div>
 
   <div class="form-group toggleable-field">
