--- a/app/views/shared/_org_autocomplete.html.erb
+++ b/app/views/shared/_org_autocomplete.html.erb
@@ -15,49 +15,47 @@ autocomplete_id = SecureRandom.hex(6)
 %>
 
 <%= fields_for :org_index do |org_index_fields| %>
-  <%= org_index_fields.label :name, label %>
-  <%= org_index_fields.text_field :name, class: "form-control auto-complete", placeholder: placeholder,
-                            value: default_org&.name,
-                            list: "autocomplete-list-#{autocomplete_id}",
-                            autocomplete: "off",
-                            aria: { label: placeholder, autocomplete: "list", required: required },
-                            data: {
-                              remote: true,
-                              url: orgs_search_path(
-                                known_only: known_only, funder_only: funder_only, context: autocomplete_id
-                              )
-                            } %>
+  <div class="col-md-8">
+    <%= org_index_fields.label :name, label %>
+    <%= org_index_fields.text_field :name, class: "form-control auto-complete", placeholder: placeholder,
+                              value: default_org&.name,
+                              list: "autocomplete-list-#{autocomplete_id}",
+                              autocomplete: "off",
+                              aria: { label: placeholder, autocomplete: "list", required: required },
+                              data: {
+                                remote: true,
+                                url: orgs_search_path(
+                                  known_only: known_only, funder_only: funder_only, context: autocomplete_id
+                                )
+                              } %>
 
-  <datalist id="autocomplete-list-<%= autocomplete_id %>">
-    <option id="<%= default_org&.id %>"><%= default_org&.name %></option>
-  </datalist>
+    <datalist id="autocomplete-list-<%= autocomplete_id %>" class="org-index-datalist">
+      <option id="<%= default_org&.id %>"><%= default_org&.name %></option>
+    </datalist>
 
-  <% if known_only %>
     <div class="autocomplete-warning-<%= autocomplete_id %> red hide">
-      <%= _("Please select an item from the list.") %>
+      <%= known_only ? _("Please select an item from the list.") : _("Please select an item from the list or check the box below and provide a name for your organization.") %>
     </div>
-  <% else %>
-    <div class="autocomplete-warning-<%= autocomplete_id %> red hide">
-      <%= _("Please select an item from the list or check the box below and provide a name for your organization.") %>
-    </div>
+  </div>
 
+  <% unless known_only %>
     <conditional>
-      <div class="checkbox col-md-12">
-        <div class="col-md-5">
+      <div class="checkbox col-md-8">
+        <div class="col-md-4">
           <%= org_index_fields.label(:not_in_list, class: 'control-label') do %>
             <%= org_index_fields.check_box(:not_in_list, class: "new-org-entry",
-                                                        context: "not-in-list-#{autocomplete_id}") %>
+                                                         context: "not-in-list-#{autocomplete_id}") %>
             <%= _('I cannot find my %{item_label} in the list') % { item_label: label.downcase } %>
           <% end %>
         </div>
-        <div class="col-md-7">
+        <div class="col-md-8">
           <%= org_index_fields.text_field :user_entered_name,
-                                          placeholder: _("Please enter your %{item_label} name") % { item_label: label.downcase },
+                                          placeholder: _("Please enter the %{item_label} name") % { item_label: label.downcase },
                                           class: "form-control toggleable-field user-entered-org-#{autocomplete_id}" %>
         </div>
       </div>
     </conditional>
   <% end %>
 
-  <%= org_index_fields.hidden_field :id, value: default_org&.id, class: "autocomplete-result" %>
+  <%#= org_index_fields.hidden_field :id, value: default_org&.id, class: "autocomplete-result" %>
 <% end %>
