--- a/app/views/devise/registrations/_personal_details.html.erb
+++ b/app/views/devise/registrations/_personal_details.html.erb
@@ -22,16 +22,16 @@
     <%= f.text_field(:surname, class: "form-control", "aria-required": true, value: @user.surname) %>
   </div>
 
-  <% org_admin = (current_user.can_org_admin? && !current_user.can_super_admin?) %>
-  <div class="form-group col-xs-8" id="profile-org-controls" <%= "data-toggle=\"tooltip\" title=\"#{_('Changing your organisation will result in the loss of your administrative privileges.')}\"" if org_admin %>>
-    <%= render partial: "shared/org_selectors/combined",
-               locals: {
-                 form: f,
-                 default_org: current_user.org,
-                 required: true
-               } %>
-  </div>
-  <% if org_admin %>
+  <% if (current_user.can_org_admin? && !current_user.can_super_admin?) %>
+    <p><%= _('Changing your organisation will result in the loss of your administrative privileges.') %></p>
+  <% end %>
+  <%= render partial: "shared/org_autocomplete",
+             locals: { form: f,
+                       default_org: @user.org,
+                       required: true,
+                       label: _("Organisation") } %>
+
+  <% if (current_user.can_org_admin? && !current_user.can_super_admin?) %>
     <input type="hidden" id="original_org" value="<%= @user.org_id %>">
   <% end %>
 
