--- a/app/views/orgs/shibboleth_ds.html.erb
+++ b/app/views/orgs/shibboleth_ds.html.erb
@@ -17,14 +17,11 @@
             <%= options_for_select(@orgs.map { |o| [o.name, o.id] }) %>
           </select>
         <% else %>
-          <%= render partial: "shared/accessible_combobox",
-                     locals: { name: "shib-ds[org_id]",
-                               id: 'shib-ds_org_id',
-                               default_selection: nil,
-                               models: @orgs,
-                               attribute: 'name',
-                               required: true,
-                               classes: '' } %>
+        <%= render partial: "shared/org_autocomplete",
+             locals: { form: f,
+                       default_org: nil,
+                       required: true,
+                       label: _("Organisation") } %>
         <% end %>
 
         <%= f.button(_('Go'), class: "btn btn-default", type: "submit") %>
