--- a/app/views/shared/_create_account_form.html.erb
+++ b/app/views/shared/_create_account_form.html.erb
@@ -13,14 +13,11 @@
     <%= f.email_field(:email, class: "form-control", "aria-required": true) %>
   </div>
   <div class="form-group" id="create-account-super-controls">
-    <%= render partial: "shared/org_selectors/new_one",
-               locals: {
-                 form: f,
-                 label: "SUPER Search Service",
-                 search_type: "super",
-                 default_org: resource&.org,
-                 required: true
-               } %>
+    <%= render partial: "shared/org_autocomplete",
+             locals: { form: f,
+                       default_org: resource&.org,
+                       required: true,
+                       label: _("Organisation") } %>
   </div>
   <div class="form-group">
     <%= f.label(:password, _('Password'), class: "control-label") %>
