--- a/app/views/super_admin/users/edit.html.erb
+++ b/app/views/super_admin/users/edit.html.erb
@@ -26,14 +26,11 @@
         <%= f.text_field(:surname, class: "form-control", "aria-required": true) %>
       </div>
 
-      <div class="form-group col-xs-12" id="super-admin-user-org-controls">
-        <%= render partial: "shared/org_selectors/combined",
-               locals: {
-                 form: f,
-                 default_org: @user.org,
-                 required: true
-               } %>
-      </div>
+      <%= render partial: "shared/org_autocomplete",
+             locals: { form: f,
+                       default_org: @user.org,
+                       required: true,
+                       label: _("Organisation") } %>
 
       <% if @departments.any? %>
       <div class="form-group col-xs-12">
