--- a/app/javascript/src/utils/tinymce.js.erb
+++ b/app/javascript/src/utils/tinymce.js.erb
@@ -2,6 +2,8 @@
 import tinymce from 'tinymce/tinymce';
 // Import TinyMCE theme
 import 'tinymce/themes/modern/theme';
+// Import TinyMCE skin
+import 'tinymce/skins/lightgray/skin.min.css';
 // Plugins
 import 'tinymce/plugins/table';
 import 'tinymce/plugins/lists';
@@ -45,7 +47,7 @@ export const defaultOptions = {
   },
   // editorManager.baseURL is not resolved properly for IE since document.currentScript
   // is not supported, see issue https://github.com/tinymce/tinymce/issues/358
-  // skin_url: '/tinymce/skins/lightgray',
+  skin_url: '/tinymce/skins/lightgray',
   content_css: ['/tinymce/tinymce.css'],
 };
 /*
