--- a/app/javascript/src/utils/tinymce.js.erb
+++ b/app/javascript/src/utils/tinymce.js.erb
@@ -47,8 +47,8 @@ export const defaultOptions = {
   },
   // editorManager.baseURL is not resolved properly for IE since document.currentScript
   // is not supported, see issue https://github.com/tinymce/tinymce/issues/358
-  skin_url: '/tinymce/skins/lightgray',
-  content_css: ['/tinymce/tinymce.css'],
+  // skin_url: '/tinymce/skins/lightgray',
+  // content_css: ['/tinymce/tinymce.css'],
 };
 /*
   This function is invoked anytime a new editor is initialised (e.g. Tinymce.init())
