--- a/app/javascript/src/utils/tinymce.js.erb
+++ b/app/javascript/src/utils/tinymce.js.erb
@@ -3,7 +3,8 @@ import tinymce from 'tinymce/tinymce';
 // Import TinyMCE theme
 import 'tinymce/themes/modern/theme';
 // Import TinyMCE skin
-import 'tinymce/skins/lightgray/skin.min.css';
+// import 'tinymce/skins/lightgray/skin.min.css';
+// import 'tinymce/skins/lightgray/content.min.css';
 // Plugins
 import 'tinymce/plugins/table';
 import 'tinymce/plugins/lists';
