--- a/app/javascript/src/utils/tinymce.js.erb
+++ b/app/javascript/src/utils/tinymce.js.erb
@@ -47,7 +47,7 @@ export const defaultOptions = {
   // is not supported, see issue https://github.com/tinymce/tinymce/issues/358
   // skin_url: '/tinymce/skins/lightgray',
   // content_css: ['/tinymce/tinymce.css'],
-  skin_url: '<%= javascript_pack_tag "tinymce", "data-turbolinks-track": "reload" %>',
+  skin_url: '<%= helpers.stylesheet_link_tag "tinymce" %>',
 };
 /*
   This function is invoked anytime a new editor is initialised (e.g. Tinymce.init())
