--- a/app/javascript/src/utils/tinymce.js.erb
+++ b/app/javascript/src/utils/tinymce.js.erb
@@ -45,7 +45,7 @@ export const defaultOptions = {
   table_default_attributes: {
     border: 1,
   },
-  skin: false,
+  // skin: false,
   // editorManager.baseURL is not resolved properly for IE since document.currentScript
   // is not supported, see issue https://github.com/tinymce/tinymce/issues/358
   // skin_url: '/tinymce/skins/lightgray',
