tweak to fix tinymce skins

--- a/app/javascript/src/utils/tinymce.js.erb
+++ b/app/javascript/src/utils/tinymce.js.erb
@@ -9,8 +9,6 @@ import 'tinymce/plugins/autoresize';
 import 'tinymce/plugins/link';
 import 'tinymce/plugins/paste';
 import 'tinymce/plugins/advlist';
-// Skin
-import 'tinymce/skins/lightgray/skin.min.css';
 
 // Other dependencies
 import { isObject, isString } from './isType';
@@ -48,8 +46,8 @@ export const defaultOptions = {
   // skin: false,
   // editorManager.baseURL is not resolved properly for IE since document.currentScript
   // is not supported, see issue https://github.com/tinymce/tinymce/issues/358
-  // skin_url: '/tinymce/skins/lightgray',
-  // content_css: ['/tinymce/tinymce.css'],
+  skin_url: '/tinymce/skins/lightgray',
+  content_css: ['/tinymce/tinymce.css'],
 };
 /*
   This function is invoked anytime a new editor is initialised (e.g. Tinymce.init())
